# ghost-layer

./: .env.example  .gitignore  AGENTS.md  ANTIGRAVITY_HANDOFF.md  CHANGELOG.md  Dockerfile  LAUNCH_STRATEGY.md  LICENSE  PUBLISH_NO_TERMINAL.md  README.md  SEO_DEPLOYMENT.md  docker-compose.yml  llms.txt  push.sh  pyproject.toml  requirements.txt  smithery.yaml
.github/workflows/: ci.yml
.well-known/: ai-plugin.json  ai.txt
ai/: faq.json  summary.json
docs/: ARCHITECTURE.md  SECURITY.md  ghost-stack-page.html
docs/deploy/: llms.txt  robots.txt  sitemap.xml
examples/: langchain_agent.py  x402_payment_agent.py
ghost/: __init__.py  cli.py  crypto.py  gateway.py  langchain.py  proxy.py  session.py  store.py
ghost/vapl/: __init__.py  credentials.py  identity.py  middleware.py  soul_manager.py
scripts/: check-sovereign-data.sh
tests/: test_gateway.py  test_ghost.py  test_langchain.py
