[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-layer"
version = "0.1.0"
description = "Ephemeral execution layer for autonomous AI agents — scoped credentials, cryptographic residue."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Timothy Walton", email = "ScriptMasterLabs@gmail.com" }]
keywords = ["ai-agents", "autonomous", "ephemeral", "credentials", "cryptography", "audit", "x402"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine"]

[project.urls]
Homepage = "https://scriptmasterlabs.com/stack/ghost"
Repository = "https://github.com/timwal78/ghost-layer"
Documentation = "https://github.com/timwal78/ghost-layer/blob/main/docs/ARCHITECTURE.md"
Issues = "https://github.com/timwal78/ghost-layer/issues"

[project.scripts]
ghost = "ghost.cli:main"

[tool.setuptools.packages.find]
include = ["ghost*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
